Edited wording in notebooks

--- a/scripts/feature-selection-logistic-regression.ipynb
+++ b/scripts/feature-selection-logistic-regression.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this note book, we present how we select features based on correlations with the Hall of Fame features. We also investigate the performance using Logistic regression."
+    "In this notebook, we present how we select features based on correlations with the Hall of Fame features. We also investigate the performance using Logistic regression."
    ]
   },
   {
@@ -377,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We find that the learning curve varies a lot as we rerun the script several times. This indicates that the number the data is not enough for the learning curve to converge to the statistical expectation. To overcome this, we apply bootstraping technique."
+    "We find that the learning curve varies a lot as we rerun the script several times. This indicates that the number the data is not enough for the learning curve to converge to the statistical expectation. To overcome this, we apply bootstraping."
    ]
   },
   {
