--- a/scripts/data-gathering.ipynb
+++ b/scripts/data-gathering.ipynb
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We first scrape the content of the wekipedia page and then extract the elements of the table for Hall of Fame inductees"
+    "We first scrape the content of the wekipedia page and then extract the elements of the table for Hall of Fame inductees."
    ]
   },
   {
