Text changs in feature-selection-logistic-regression

--- a/scripts/feature-selection-logistic-regression.ipynb
+++ b/scripts/feature-selection-logistic-regression.ipynb
@@ -518,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the number of the boostraping sets increases, the learning curve becomes smoother and shows consistent behavior. Based on the these learning curve, the model has low bias, as the f1 score can attain around 0.88, and low variance, as the gap between training score and cross-validation score is small. Next, we explore the possbility to improve the results by including more representing features. "
+    "As the number of the boostraping sets increases, the learning curve becomes smoother and shows consistent behavior. Based on these learning curves, the training f1 score can attain around 0.88, indicating the model has low bias. Also, the gap between training score and cross-validation score is around 0.01, indicating the variance is low. Comparing these two, error is dominating by the bias. Therefore, we explore the possbility to improve the results by including more representing features, i.e. increase model complexity. "
    ]
   },
   {
